# petrocast

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  .yamllint.yaml  LICENSE  README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-data.yml  ci.yml  deploy-preview-cleanup.yml  deploy-preview.yml  deploy-production.yml  deploy-staging.yml  tf-plan.yml
apps/: .dockerignore
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/app/: auth.py  main.py  mock_data.py  schemas.py
apps/api/src/: main.py
apps/api/src/api/: deps.py
apps/api/src/api/v1/: router.py
apps/api/src/api/v1/endpoints/: forecast.py  health.py  prediction.py  wells.py
apps/api/src/core/: config.py  db.py  security.py  serving.py
apps/api/src/repositories/: feature_repository.py  forecast_repository.py  well_repository.py
apps/api/src/schemas/: base.py  forecast.py  prediction.py  well.py
apps/api/src/services/: forecast_service.py  prediction_service.py  well_service.py
apps/api/tests/: conftest.py  test_auth.py  test_forecast.py  test_wells.py
apps/api/tests/contract/: test_openapi_contract.py  test_openapi_security.py
apps/api/tests/e2e/: test_predictions_e2e.py
apps/api/tests/integration/api/v1/: test_auth.py  test_forecast.py  test_health.py  test_prediction.py  test_wells.py
apps/api/tests/smoke/: test_smoke.py
apps/api/tests/unit/: test_config.py  test_serving.py
apps/api/tests/unit/services/: test_forecast_service.py  test_prediction_service.py  test_well_service.py
apps/data/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/data/dbt/: dbt_project.yml  profiles.yml
apps/data/dbt/macros/: non_negative.sql
apps/data/dbt/models/bronze/: sources.yml
apps/data/dbt/models/features/: schema.yml  well_features.sql
apps/data/dbt/models/gold/: dim_company.sql  dim_date.sql  dim_well.sql  fact_production.sql  schema.yml  v_monthly_production_by_well.sql  v_top_wells_by_volume.sql
apps/data/dbt/models/silver/: schema.yml  silver_production.sql  silver_wells.sql  smoke_events.sql
apps/data/dbt/sqlfluff_libs/: dbt_utils.py
apps/data/dbt/tests/: assert_well_features_point_in_time.sql
apps/data/dbt/tests/features/: assert_well_features_point_in_time.sql
apps/data/src/petrocast_data/: __init__.py  datos_gob_ar.py  definitions.py  resources.py  schedules.py  sensors.py  settings.py
apps/data/src/petrocast_data/assets/: __init__.py  dbt.py  dlt.py  features.py  training.py  warehouse.py
apps/data/tests/fixtures/: production_by_well.csv  wells_registry.csv
apps/data/tests/unit/: test_backfill_policy.py  test_blocking_checks.py  test_datos_gob_ar.py  test_feature_asset.py  test_notifications.py  test_quality_sensor.py  test_settings.py  test_training_assets.py
apps/ml/: .env.example  Dockerfile  README.md  pyproject.toml
apps/ml/src/petrocast_ml/: __init__.py  config.py  inference.py  registry.py  tracking.py  training.py
apps/ml/src/petrocast_ml/evaluation/: __init__.py  arps.py  gates.py  metrics.py  report.py
apps/ml/src/petrocast_ml/features/: __init__.py  contract.py  dataset.py  engineering.py  schema.py
apps/ml/src/petrocast_ml/training/: __init__.py  __main__.py  artifact.py  contracts.py  dataset.py  model.py  pipeline.py
apps/ml/tests/: conftest.py
apps/ml/tests/fixtures/: expected_naive_backtest.csv  expected_training_dataset.csv  production_monthly.csv  well_features.csv
apps/ml/tests/smoke/: test_evaluation_cli.py  test_import.py  test_inference_smoke.py  test_registry_cli.py  test_registry_mlflow.py  test_tracking_mlflow.py  test_training_smoke.py
apps/ml/tests/unit/: test_arps.py  test_evaluation.py  test_evaluation_metrics.py  test_feature_contract.py  test_feature_dataset.py  test_feature_engineering.py  test_fixture_datasets.py  test_gates.py  test_inference.py  test_registry.py  test_tracking.py  test_training_dataset.py
docs/: supuestos-y-clarificaciones.md
docs/adr/: 0001-uso-de-adrs.md  0002-idioma-del-proyecto.md  0003-estructura-monorepo.md  0004-estrategia-branching.md  0005-convenciones-commits-prs.md  0006-conenciones-naming.md  0006-convenciones-naming.md  0007-alineacion-contrato-openapi-fase-1.md  0007-alineacion-contrato-openapi-fase1.md  0008-stack-backend.md  0008-topologia-de-ambientes.md  0009-estrategia-deployments.md  0010-plataforma-hosting.md  0011-plataforma-cicd.md  0012-stack-backend-python-fastapi-uv.md  0013-container-registry-aws-ecr.md  0014-imagenes-docker-slim-multistage-nonroot.md  0015-analisis-estatico-ruff-mypy-precommit.md  0016-estrategia-testing-pytest-schemathesis.md  0017-observabilidad-cloudwatch-dashboard-local.md  0017-observabilidad-prometheus-grafana-loki.md  0018-gestion-configuracion-pydantic-settings.md  0019-infraestructura-terraform-aws.md  0020-estructura-directorios-backend.md  0021-observabilidad-local-fase1.md  0022-gobierno-datos-linaje-datahub.md  0023-arquitectura-medallion-dbt.md  0023-orquestacion-e-ingesta-dagster-dlt.md  0024-modelo-dimensional-star-schema.md  0025-calidad-datos-consecuencia.md  0026-tipo-carga-medallion.md  0027-topologia-despliegue-fase2.md  0028-orquestacion-e-ingesta-dagster-dlt.md  0029-plataforma-bi-metabase.md  0030-objetivo-predictivo-horizonte-metricas.md  0031-estrategia-feature-store.md  0032-tracking-experimentos-registry.md  0033-orquestacion-entrenamiento-retraining.md  0034-serving-modelo-contrato-api.md  0035-cicd-pipelines-ml-promocion.md  (+3 more)
docs/architecture/: c4-containers.md  c4-context.md  linaje.md  modelo-datos.md
docs/assignment/: adenda-fase-1.md  adenda-fase-2.md  adenda-fase-3.md  trabajo-integrador.md
docs/backlog/: issues-fase-2.md  issues-fase-3.md
docs/fase-2/: README.md
docs/fase-3/: README.md  backtesting-report.md  demo-tracking-api.md  model-card.md  video-guia-maestra.md
docs/prd/: prd-v0.1.md  (+7 more)
infra/: README.md  compose.data.yml  compose.datahub.yml  compose.dev.yml  compose.mlflow.yml  compose.observability.yml  compose.staging.yml
(+92 files in other folders)
