[project]
name = "petrocast-api"
version = "0.1.0"
description = "API para consultar el listado de pozos y sus pronósticos de producción."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "pandas>=2.0",
    "petrocast-ml",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "schemathesis>=3.36.0",
]

[tool.uv]
# Security pins: force patched versions of transitive deps flagged by Trivy
# (HIGH severity, fixes available upstream). Drop when direct deps pull these in.
constraint-dependencies = [
    "python-multipart>=0.0.27",  # CVE-2026-42561
    "starlette>=1.3.1",          # CVE-2026-48818, CVE-2026-54283
    "urllib3>=2.7.0",            # CVE-2026-44431, CVE-2026-44432
]

[tool.uv.sources]
petrocast-ml = { path = "../ml", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "S", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "N"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["prometheus_fastapi_instrumentator.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["psycopg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas.*"]
ignore_missing_imports = true

# petrocast_ml is a local editable path dep (py.typed): resolved and type-checked
# by `uv run mypy`, but absent from the isolated pre-commit mypy hook env, so it
# must be ignore-missing there (same pattern as psycopg above).
[[tool.mypy.overrides]]
module = ["petrocast_ml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/contract"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
