[project]
name = "petrocast-ml"
version = "0.1.0"
description = "Shared machine-learning contracts and runtime for Petrocast."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm==4.6.0",
    "mlflow==3.14.0",
    "numpy>=2.0.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "scikit-learn>=1.6.0,<2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.11.0",
    "pandas-stubs>=2.2.0",
    "pytest>=9.0.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/petrocast_ml"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests/smoke"]
